feat: add spark integration module with DataFrame-TOON conversion